--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "laravel/sanctum": "^2.14",
     "laravel/tinker": "^2.7",
     "laraveldaily/laravel-invoices": "3.0",
+    "pion/laravel-chunk-upload": "^1.5",
     "spatie/laravel-collection-macros": "^7.12",
     "yajra/laravel-datatables-oracle": "^10.7"
   },
