update laravel/framework from 9 to 10, changes in login, add chargily customer

--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,6 @@ yarn-error.log
 /.vscode
 /public/uploads
 fresh-dz-firebase-adminsdk-97277-04833114fb.json
+chargily-pay-credentials.json
 # But not these files...
 !/public/assets/*
