--- a/composer.json
+++ b/composer.json
@@ -8,29 +8,26 @@
   ],
   "license": "MIT",
   "require": {
-    "php": "^8.0.2",
-    "askedio/laravel-soft-cascade": "^10.0",
-    "barryvdh/laravel-dompdf": "^1.0",
-    "fruitcake/laravel-cors": "^2.0.5",
+    "php": "^8.1",
+    "askedio/laravel-soft-cascade": "^11.0",
+    "chargily/chargily-pay": "^2.0",
     "guzzlehttp/guzzle": "^7.2",
-    "khaled.alshamaa/ar-php": "^6.3",
-    "kreait/firebase-tokens": "*",
-    "kreait/laravel-firebase": "=5.5.0",
-    "laravel/framework": "^9.0",
-    "laravel/sanctum": "^2.14",
-    "laravel/tinker": "^2.7",
-    "laraveldaily/laravel-invoices": "3.0",
+    "kreait/laravel-firebase": "^5.10",
+    "laravel/framework": "^10.0",
+    "laravel/sanctum": "^3.2",
+    "laravel/tinker": "^2.8",
+    "mpdf/mpdf": "^8.2",
     "pion/laravel-chunk-upload": "^1.5",
-    "spatie/laravel-collection-macros": "^7.12",
-    "yajra/laravel-datatables-oracle": "^10.7"
+    "spatie/laravel-collection-macros": "^7.14",
+    "yajra/laravel-datatables-oracle": "^10.11"
   },
   "require-dev": {
     "fakerphp/faker": "^1.9.1",
     "laravel/sail": "^1.0.1",
     "mockery/mockery": "^1.4.4",
-    "nunomaduro/collision": "^6.1",
-    "phpunit/phpunit": "^9.5.10",
-    "spatie/laravel-ignition": "^1.0"
+    "nunomaduro/collision": "^7.0",
+    "phpunit/phpunit": "^10.0",
+    "spatie/laravel-ignition": "^2.0"
   },
   "autoload": {
     "psr-4": {
