--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "laravel/tinker": "^2.8",
     "mpdf/mpdf": "^8.2",
     "pion/laravel-chunk-upload": "^1.5",
+    "pusher/pusher-push-notifications": "^2.0",
     "spatie/laravel-collection-macros": "^7.14",
     "yajra/laravel-datatables-oracle": "^10.11"
   },
