--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -28,6 +28,7 @@
     "/assets/js/ui-modals.js": "/assets/js/ui-modals.js?id=9caa98e36385aa67e12536c1333a11ec",
     "/assets/js/ui-popover.js": "/assets/js/ui-popover.js?id=837f272fdcd8e306087bb2d75fd9c5a6",
     "/assets/js/ui-toasts.js": "/assets/js/ui-toasts.js?id=d7b0e0b7de80dc28ca7e3e1bca031acd",
+    "/assets/css/app.css": "/assets/css/app.css?id=d729b82b8add4fd01a768e5139e05154",
     "/assets/css/demo.css": "/assets/css/demo.css?id=6ec63121218f83eed6a13a8aa3decb44",
     "/assets/vendor/fonts/boxicons/boxicons.eot": "/assets/vendor/fonts/boxicons/boxicons.eot?id=de8d60537373a915368b708e44fb2355",
     "/assets/vendor/fonts/boxicons/boxicons.svg": "/assets/vendor/fonts/boxicons/boxicons.svg?id=f962c3205f70ff47e6a86928d925e49f",
