--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "php": "^8.1",
     "askedio/laravel-soft-cascade": "^11.0",
     "chargily/chargily-pay": "^2.0",
+    "chrome-php/chrome": "^1.13",
     "guzzlehttp/guzzle": "^7.2",
     "kreait/laravel-firebase": "^5.10",
     "laravel/framework": "^10.0",
