--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "askedio/laravel-soft-cascade": "^11.0",
     "chargily/chargily-pay": "^2.0",
     "chrome-php/chrome": "^1.13",
+    "dompdf/dompdf": "^3.1",
     "guzzlehttp/guzzle": "^7.2",
     "kreait/laravel-firebase": "^5.10",
     "laravel/framework": "^10.0",
@@ -20,6 +21,7 @@
     "mpdf/mpdf": "^8.2",
     "pion/laravel-chunk-upload": "^1.5",
     "pusher/pusher-push-notifications": "^2.0",
+    "simplesoftwareio/simple-qrcode": "^4.2",
     "spatie/laravel-collection-macros": "^7.14",
     "spatie/laravel-pdf": "^1.5",
     "yajra/laravel-datatables-oracle": "^10.11"
